app/assets/stylesheets/books.css
.book__cover {
  border-radius: 0.3em;
  margin: auto;
  max-block-size: var(--cover-height, 75dvh);
}

.bookmark {
  --icon-space: calc(var(--inline-space) * 1.8);

  appearance: none;
  background: none;
  border: 0;
  display: block;
  inset: var(--progress, 0) 0 auto calc(var(--icon-space) * -1);
  margin: calc(var(--block-space) * -0.5) 0;
  padding: 0;
  position: absolute;

  .bookmark__icon {
    display: flex;
    flex-grow: 1;

    &::after {
      border-block-end: 1px solid var(--color-alert);
      content: "";
      display: flex;
      flex-grow: 0;
      inline-size: calc(100% - var(--icon-space));
      margin: auto;
    }
  }
}

.book__title {
  font-size: clamp(2rem, 6cqi, 3rem);
  font-weight: 750;
}

.book__toolbar {
  inset-block-start: var(--block-space);
  outline: var(--block-space) solid var(--color-bg);
  padding: var(--hover-size);
  position: sticky;
  z-index: 1;
}

